--- a/portfolio1.html
+++ b/portfolio1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo">portfolio</a>
+        <a href="" class="logo">My portfolio</a>
         <div class="toggle"></div>
         <ul>
             <li><a href="#home">Home</a></li>
